tests/negative/traits/associated_type_constraint.orng
// associated_type_constraint.orng:13:22: error: the type `Int` does not implement the trait `A`
//     type Addend = Int
//                     ^
// 
trait A {}

trait B {
    type Addend: A
}

struct Impler { x: Int }
impl B for Impler {
    type Addend = Int
}

fn main() -> Int { 430 }